2006-04-26  Per Bothner  <per@bothner.com>

	* ApplyToArgs.java (applyN): Remove debug message print-out.

2006-03-25  Per Bothner  <per@bothner.com>

	* NumberCompare.java (compare): Fix case of either arg a non-number.

2006-03-23  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (inline): Do inline new ApplyExp.
	(NamedPart.inline): Likewise.
	(NamedPartSetter.inline): Likewise.

2006-03-20  Per Bothner  <per@bothner.com>

	* ApplyToArgs.java: When creating new ApplyExp, make sure to copy
	line number from original.
	* GetNamedPart.java: Likewise.

2006-03-07  Per Bothner  <per@bothner.com>

	* Arithmetic.java (asIntNum): New overloaded static helper methods.
	(asIntNum(value)): Handle BigDecimal.

	* NumberCompare.java (compare): New method.
	(apply2): Now just a wrapper from compare.

2006-03-01  Per Bothner  <per@bothner.com>

	* LispFormat.java (LispRealFormat.resolve): Set new exponentShowSign
	field of ExponentialFormat.

2006-02-19  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (getNamedPart): Update for
	simplified Classmethods.{GetMethods,apply} parameter lists.

	* GetNamedPart.java (inline): Update to use SlotGet.lookupMember.
	* SetNamedPart.java (inline): Update to use SlotSet.lookupMember.
	
2006-02-16  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (GetNamedExp.inline): Re-organize to use a switch
	statement based on 'kind' field.  Fix some buglets.

	* GetNamedPart.java (GetNamedExp.side_effects): New method.

	* GetNamedPart.java (inline): Fix switched arguments to getMethods.

2006-02-14  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (combineName): New static method.
	(makeExp): Use combineName.

2006-02-13  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (makeExp): Calculate combined name if first operand
	is a ReferenceExp or a nested GetNamedExp and 2nd is a constant string.
	Change return type to Expression, since if combined name is bound in
	lexical scope we use that. Check if 1st part matches a classname.